# NetHawk

./: .gitignore  ARCHITECTURE.md  LEGAL.md  NetHawk.py  NetHawk_aggressive.py  NetHawk_original.py  NetHawk_robust.py  NetHawk_simple.py  README.md  clean_final.py  cleanup.py  final_cleanup.py  fix_cap2hccapx.sh  install.sh  install_manual.sh  install_simple.sh  install_standalone.sh  nethawk_wrapper.py  pyproject.toml  requirements.txt  setup.sh
nethawk/: __init__.py  __main__.py  cli.py  cli_new.py  cli_professional.py  help.py  session.py
nethawk/man/: nethawk.1
nethawk/modules/: __init__.py  active.py  capture.py  crack.py  passive.py  report.py
nethawk/util/: __init__.py  logger.py  net.py  toolcheck.py
